--- a/app/assets/stylesheets/main/notes.scss
+++ b/app/assets/stylesheets/main/notes.scss
@@ -11,6 +11,7 @@ $delete-note-hover: image_url("trash-icon-hover");
   float: left;
   display: flex;
   flex-direction: column;
+  animation-duration: 0.6s !important;
 
   .all-notes2 {
     overflow: auto;
@@ -95,6 +96,17 @@ $delete-note-hover: image_url("trash-icon-hover");
       }
     }
   }
+}
+
+.move-left {
+  transform: translateX(-440px);
+  transition: all 0.4s linear;
+  width: 0;
+}
+
+.move-right {
+  transform: translateX(0px);
+  transition: all 0.4s linear;
 }
 
 .modal-empty-note {
