Change CSS to have smooth expand animation

--- a/app/assets/stylesheets/main/quill.scss
+++ b/app/assets/stylesheets/main/quill.scss
@@ -81,12 +81,8 @@ $green: #3dbe60;
     width: 100%;
 
     .inputting-div {
-      width: 100%;
-    }
-
-    .expand {
+      width: 1100px;
       margin: 0 auto;
-      width: 76%;
     }
 
     .title-and-tag-container {
