--- a/app/assets/stylesheets/main/notes.scss
+++ b/app/assets/stylesheets/main/notes.scss
@@ -158,6 +158,7 @@ $delete-note-hover: image_url("trash-icon-hover");
   }
 }
 
+
 .each-note {
   width: 334px;
   height: 100px;
@@ -231,6 +232,12 @@ $delete-note-hover: image_url("trash-icon-hover");
       background-image: $delete-note-hover;
     }
   }
+}
+
+.clicked {
+  width: 328px;
+  height: 94px;
+  border: 3px solid #cccccc;
 }
 
 .each-note:hover {
